# DataScienceCookBook

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: .bashrc  devcontainer.json  onCreateCommand.sh
.github/workflows/: cd.yml  ci.yml
calculator/: __init__.py  calculations.py
cookbook/unit-tests/: index.html
demo/: index.html
demo/explanation/: index.html
demo/how-to-guides/: index.html
demo/reference/: index.html
demo/tutorials/: index.html
docs/: how-to-guides.md  index.md  reference.md  unit-tests.md
docs/cookbook/: index.md  unit-tests.md
docs/demo/: index.md
docs/stylesheets/: extra.css
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/tutorials/: index.html
src/: __init__.py  calculator.py  very_complex_ai_product.py
tests/unit/: test_calculator.py  test_very_complex_ai_product.py
