[tool.poetry]
name = "mkdocz"
version = "0.1.0"
description = "Quick virtual environment to demo mkdocs, material for mkdocs and mkdocstrings framework."
authors = ["Tomás Urdiales <tomas.urdialesbartolome@externel.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-material = "^9.5.48"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
jupyterlab = "^4.0.12"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src"]
